--- a/app/src/main/res/xml/setting.xml
+++ b/app/src/main/res/xml/setting.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
-    <PreferenceCategory>
-        
+    <PreferenceCategory app:title="@string/setting_category_server">
+        <EditTextPreference
+            app:key="@string/setting_backend_key"
+            app:summary="@string/setting_backend_summary"
+            app:title="@string/setting_backend_title"
+            app:useSimpleSummaryProvider="true" />
+
+        <EditTextPreference
+            app:key="@string/setting_auth_key"
+            app:summary="@string/setting_auth_summary"
+            app:title="@string/setting_auth_title"
+            app:useSimpleSummaryProvider="true">
+
+        </EditTextPreference>
     </PreferenceCategory>
-    <EditTextPreference
-        app:key="@string/setting_backend_key"
-        app:summary="@string/setting_backend_summary"
-        app:title="@string/setting_backend_title" />
-
-    <EditTextPreference
-        app:key="@string/setting_auth_key"
-        app:summary="@string/setting_auth_summary"
-        app:title="@string/setting_auth_title">
-
-    </EditTextPreference>
+    <PreferenceCategory app:title="@string/setting_category_user">
+        <EditTextPreference
+            app:key="@string/setting_user_key"
+            app:summary="@string/setting_user_summary"
+            app:title="@string/setting_user_title"
+            app:useSimpleSummaryProvider="true" />
+    </PreferenceCategory>
 
 </PreferenceScreen>
