--- a/app/src/main/res/xml/setting.xml
+++ b/app/src/main/res/xml/setting.xml
@@ -2,12 +2,14 @@
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
     <PreferenceCategory app:title="@string/setting_category_server">
         <EditTextPreference
+            app:icon="@drawable/ic_graphql_black_24dp"
             app:key="@string/setting_backend_key"
             app:summary="@string/setting_backend_summary"
             app:title="@string/setting_backend_title"
             app:useSimpleSummaryProvider="true" />
 
         <EditTextPreference
+            app:icon="@drawable/ic_barcode_black_24dp"
             app:key="@string/setting_auth_key"
             app:summary="@string/setting_auth_summary"
             app:title="@string/setting_auth_title"
@@ -17,10 +19,19 @@
     </PreferenceCategory>
     <PreferenceCategory app:title="@string/setting_category_user">
         <EditTextPreference
+            app:icon="@drawable/ic_account_black_24dp"
             app:key="@string/setting_user_key"
             app:summary="@string/setting_user_summary"
             app:title="@string/setting_user_title"
             app:useSimpleSummaryProvider="true" />
     </PreferenceCategory>
-
+    <PreferenceCategory app:title="@string/setting_category_app">
+        <SwitchPreference
+            app:defaultValue="true"
+            app:icon="@drawable/ic_network_black_24dp"
+            app:key="@string/setting_fetch_policy_key"
+            app:summaryOff="@string/setting_fetch_policy_summary_off"
+            app:summaryOn="@string/setting_fetch_policy_summary_on"
+            app:title="@string/setting_fetch_policy_title" />
+    </PreferenceCategory>
 </PreferenceScreen>
