--- a/app/src/main/res/layout/fragment_pomodoro_timing.xml
+++ b/app/src/main/res/layout/fragment_pomodoro_timing.xml
@@ -17,22 +17,30 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/target"
-            android:text="@string/default_target"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            android:layout_marginBottom="@dimen/timing_vertical_margin"
+            android:text="@string/default_target"
+            android:textSize="20sp" />
 
         <top.learningman.hystime.view.TimerView
+            android:id="@+id/timer"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="300dp"
+            android:layout_marginHorizontal="60dp"
             app:type="pomodoro" />
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/start" />
+            android:layout_marginTop="@dimen/timing_vertical_margin"
+            android:text="@string/start"
+            android:textAllCaps="false"
+            app:cornerRadius="5dp" />
+
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
