--- a/app/src/main/res/xml/setting.xml
+++ b/app/src/main/res/xml/setting.xml
@@ -36,16 +36,14 @@
         <!-- TODO:Support native mode -->
     </PreferenceCategory>
     <PreferenceCategory app:title="@string/setting_category_timer">
-        <PreferenceScreen app:title="@string/setting_screen_normal">
-            <top.learningman.hystime.utils.NumberPickerPreference
-                android:defaultValue="40"
-                android:key="@string/setting_normal_length_key"
-                android:title="@string/setting_normal_length_title" />
-        </PreferenceScreen>
-<!--        FIXME: https://developer.android.com/guide/topics/ui/settings/organize-your-settings-->
-        <PreferenceScreen app:title="@string/setting_screen_pomodoro">
-
-        </PreferenceScreen>
+        <Preference
+            app:key="@string/setting_pref_normal_key"
+            app:summary="@string/setting_pref_normal_summary"
+            app:title="@string/setting_pref_normal_title" />
+        <Preference
+            app:key="@string/setting_pref_pomodoro_key"
+            app:summary="@string/setting_pref_pomodoro_summary"
+            app:title="@string/setting_pref_pomodoro_title" />
     </PreferenceCategory>
     <PreferenceCategory app:title="@string/setting_category_other">
         <Preference
