--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,12 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:title="@string/app_name"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout"
@@ -27,10 +27,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:tabIndicatorColor="?attr/colorPrimary"
-        app:tabInlineLabel="true"
-        app:tabSelectedTextColor="?attr/colorPrimary"
         app:tabIndicatorFullWidth="false"
+        app:tabInlineLabel="true"
         app:tabMode="scrollable"
+        app:tabSelectedTextColor="?attr/colorPrimary"
         app:tabTextAppearance="@style/TextAppearance.HysTime.TabLayout" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
