--- a/app/src/main/res/xml/normal_timer_pref.xml
+++ b/app/src/main/res/xml/normal_timer_pref.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <top.learningman.hystime.utils.numberPicker.NumberPickerPreference
+    <top.learningman.hystime.utils.numberPicker.NumberPickerPreferenceCompat
         app:key="@string/setting_normal_length_key"
-        app:title="@string/setting_normal_length_title"/>
+        app:maxValue="120"
+        app:minValue="1"
+        app:title="@string/setting_normal_length_title"
+        app:unitText="@string/minute" />
 
 </PreferenceScreen>
