--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="top.learningman.hystime.ui.home.HomeFragment"
+        android:name="top.learningman.hystime.ui.timer.TimerFragment"
         android:label="@string/title_home"
         />
 
