--- a/app/src/main/res/xml/setting.xml
+++ b/app/src/main/res/xml/setting.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <PreferenceCategory app:title="@string/setting_category_server">
+    <PreferenceCategory
+        app:title="@string/setting_category_server"
+        app:key="@string/setting_category_server_key">
         <EditTextPreference
             app:icon="@drawable/ic_graphql_black_24dp"
             app:key="@string/setting_backend_key"
