--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:ns1="urn:oasis:names:tc:xliff:document:1.2">
+<resources>
 
     <style name="TextAppearance.HysTime.TabLayout" parent="Base.TextAppearance.AppCompat.Title">
         <item name="android:textColor">#42000000</item>
