--- a/app/src/main/res/xml/pomodoro_timer_pref.xml
+++ b/app/src/main/res/xml/pomodoro_timer_pref.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
     <PreferenceCategory app:title="@string/setting_category_timer_setting_title">
         <top.learningman.hystime.utils.numberPicker.NumberPickerPreferenceCompat
             app:defaultValue="25"
