--- a/app/src/main/res/layout/fragment_normal_timing.xml
+++ b/app/src/main/res/layout/fragment_normal_timing.xml
@@ -7,22 +7,19 @@
     android:layout_height="match_parent"
     tools:context=".ui.timer.timing.NormalTimingFragment">
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+
+    <top.learningman.hystime.view.TimerView
+        android:id="@+id/timer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingBottom="48dp"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="@dimen/timer_horizontal_margin"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="W,1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <top.learningman.hystime.view.TimerView
-            android:id="@+id/timer"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            app:type="normal" />
-    </androidx.appcompat.widget.LinearLayoutCompat>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="@dimen/timer_dias"
+        app:type="normal" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
