--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -73,42 +73,14 @@
             app:layout_constraintVertical_bias="@dimen/timer_dias" />
 
 
-
-
-
-        <!--        <androidx.appcompat.widget.LinearLayoutCompat-->
-        <!--            android:id="@+id/break_group"-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout_gravity="center"-->
-        <!--            android:visibility="invisible"-->
-        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--            app:layout_constraintEnd_toEndOf="parent"-->
-        <!--            app:layout_constraintStart_toStartOf="parent"-->
-        <!--            app:layout_constraintTop_toTopOf="parent"-->
-        <!--            app:layout_constraintVertical_bias="0.80">-->
-
-        <!--            <com.google.android.material.button.MaterialButton-->
-        <!--                android:id="@+id/break_start"-->
-        <!--                android:layout_width="wrap_content"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:layout_gravity="center"-->
-        <!--                android:text="@string/break_start"-->
-        <!--                android:textAllCaps="false"-->
-        <!--                style="?attr/materialButtonOutlinedStyle"-->
-        <!--                app:cornerRadius="5dp" />-->
-
-        <!--            <com.google.android.material.button.MaterialButton-->
-        <!--                android:id="@+id/exit"-->
-        <!--                android:layout_width="wrap_content"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:layout_gravity="center"-->
-        <!--                android:layout_marginStart="16dp"-->
-        <!--                android:text="@string/stop"-->
-        <!--                android:textAllCaps="false"-->
-        <!--                app:cornerRadius="5dp" />-->
-        <!--        </androidx.appcompat.widget.LinearLayoutCompat>-->
-
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/buttonGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ref" />
 
     </top.learningman.hystime.utils.NestedScrollableHost>
 
