fix: finish timer

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,6 @@
     <color name="timing_circle_base">#ede7f6</color>
     <color name="timing_circle">#9575cd</color>
 
-    <color name="relax_color">#8BC34A</color>
-    <color name="relax_color_base">#DCEDC8</color>
+    <color name="relax_color_base">#C8E6C9</color>
+    <color name="relax_color">#4CAF50</color>
 </resources>
