--- a/app/src/main/res/layout/item_dashboard_target.xml
+++ b/app/src/main/res/layout/item_dashboard_target.xml
@@ -12,7 +12,7 @@
         android:layout_marginVertical="8dp"
         android:clickable="true"
         android:focusable="true"
-        app:cardElevation="2dp"
+        app:cardElevation="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/target_title_placeholder"
-                android:textAppearance="?attr/textAppearanceHeadline5"
+                android:textAppearance="?attr/textAppearanceHeadline6"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,6 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/target_title_placeholder"
+                android:layout_marginTop="4dp"
                 android:textAppearance="?attr/textAppearanceSubtitle1"
                 android:textColor="?android:attr/textColorSecondary"
                 app:layout_constraintStart_toStartOf="parent"
@@ -44,14 +45,15 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/startTimer"
-                style="@style/Widget.Design.FloatingActionButton"
+                style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="52dp"
                 android:layout_height="52dp"
+                app:cornerRadius="26dp"
                 android:insetLeft="0dp"
                 android:insetTop="0dp"
                 android:insetRight="0dp"
                 android:insetBottom="0dp"
-                app:icon="@drawable/ic_timer_white_40dp"
+                app:icon="@drawable/ic_timer_black_40dp"
                 app:iconGravity="textStart"
                 app:iconPadding="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
