--- a/app/src/main/res/layout/activity_timer_full_screen.xml
+++ b/app/src/main/res/layout/activity_timer_full_screen.xml
@@ -17,6 +17,7 @@
         android:textColor="@color/primaryTextColor"
         android:textSize="88sp"
         android:typeface="monospace"
+        android:layout_marginBottom="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
