--- a/app/src/main/res/xml/normal_timer_pref.xml
+++ b/app/src/main/res/xml/normal_timer_pref.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
     <PreferenceCategory app:title="@string/setting_category_timer_setting_title">
-        <top.learningman.hystime.utils.numberPicker.NumberPickerPreferenceCompat
+        <top.learningman.hystime.view.numberPicker.NumberPickerPreferenceCompat
             app:defaultValue="45"
             app:key="@string/setting_normal_length_key"
             app:maxValue="90"
@@ -9,7 +9,7 @@
             app:title="@string/setting_normal_length_title"
             app:unitText="@string/minute" />
 
-        <top.learningman.hystime.utils.numberPicker.NumberPickerPreferenceCompat
+        <top.learningman.hystime.view.numberPicker.NumberPickerPreferenceCompat
             app:defaultValue="15"
             app:key="@string/setting_normal_break_length_key"
             app:maxValue="30"
