refactor: use new class name
Signed-off-by: Zxilly <zhouxinyu1001@gmail.com>

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,7 +13,7 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="top.learningman.hystime.ui.dashboard.DashboardFragment"
+        android:name="top.learningman.hystime.ui.dashboard.DashboardListFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
