--- a/app/src/main/res/layout/fragment_dashboard_list.xml
+++ b/app/src/main/res/layout/fragment_dashboard_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    tools:context=".ui.dashboard.DashboardFragment">
+    tools:context=".ui.dashboard.DashboardListFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
